# visual_tracks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run.py  run_vroot.py  setup.py
.devcontainer/: devcontainer.json
acctrack/: run.py  utils_plot.py
acctrack/io/: __init__.py  acts.py  acts_data.py  athena_data.py  athena_raw_data.py  athena_raw_root.py  base.py  features.py  pyg_data_reader.py  reco_trkx.py  track_data.py  track_pyg_data.py  trackml.py  trackml_cell_info.py  trackml_detector.py  utils.py  utils_athena_raw.py  utils_athena_raw_root.py  utils_feature_store.py
acctrack/scripts/: process_data.py
acctrack/task/: base.py  compare_two_files.py  convert_gnn_tracks_for_fitting.py  hparams_mixin.py  test_task.py  (+3 more)
configs/: plot_bad_tracks.yaml  run_task.yaml  run_vroot_task.yaml
notebooks/: 1.0readDumperObject.ipynb  1.1compare_ckf_with_GNN-rel24.ipynb  1.2analyze athena log.ipynb  2.0 validate walkthrough.ipynb  3.0 Evaluate Graph Parcification.ipynb  analyze_bad_tracks.ipynb  analyze_cluters_per_track.ipynb  cc_and_walk.ipynb  ckf_tracks.ipynb  common_tracks.txt  compare_ckf_with_GNN.ipynb  convert_gnn_tracks_for_fitting.ipynb  evaluate_different_errors.ipynb  exatrkx_inference.yaml  graph_segment.ipynb  knn-comparison.ipynb  metric_learning-nonoise.yaml  model_inference.ipynb  read_athena_raw_root.ipynb
scripts/: clean_athena_run.sh  convert_gnn_tracks.py  create_a_template.py  dumpITkTrackCandidates.py  evtfilter.py  install_pyg.sh  plot_bad_tracks.py  process_track_data.py  run_tracking.sh  split_files_for_nn.py
(+92 files in other folders)
